Quorum/Library/Tests/Actions/Pass/MultipleNestedFunctionCallsWithAssignments.quorum
class Main
    action Main
       integer a = multiply(multiply(2, 2), multiply(2, 2))
       a = multiply(multiply(a, a), multiply(a, a))
       output a
    end

    action multiply(integer a, integer b) returns integer
        return a * b
    end
end