Quorum/Library/Tests/Actions/Fail/HOCReturnIntFromMain.quorum
action Main
    a = B()
    return 3
end

action B
end